[Vulkan] Prepare Vulkan